# AVRPS

./: AVRPS.py  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  avrps_config.ini  pyproject.toml  requirements.txt  test_cve.json  tool_info.json
.github/workflows/: ci.yml
tests/: test_basic_import.py  test_core_smoke.py
tools/: verify_startup.py
